--- a/bio.html
+++ b/bio.html
@@ -1,22 +1,30 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>who is oliver laric</title>
+    <title>Who is Oliver Laric</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
-    <h1>WHO IS OLIVER LARIC</h1>
-        <div class="back">
+<body class="bio">
+
+    <div class="back">
         <a href="index.html">back</a>
-        <p class="back"> 
-
-    <img src="images/oliver1.jpg" alt="this is a picture of oliver laric" class="photo">
-    
-    <img src="images/oliver2.jpg" alt="this is a picture of oliver laric" class="photo">
-
-    <p class="who is he?"> Born in 1981 in Austria, now based in Berlin, Oliver Laric is regarded for exploring how appropriation serves as a creative force that shapes visual culture across both the past and present. His main themes seen throughout his work focus on the ideas of Iconoclasm, Kopienkritik, and copyright. He leverages multimedia to exemplify these concepts, this is seen through his work with sculpture, 3D technology, and video. One of his most prominent works is Versions (2010), a video essay which dives into these themes of copyright and iconoclasm. Icon (Utrecht) (2009) and Kopienkritik (2011) focus on how modifying sculptures can augment our understanding of historical artifacts and how they relate to the digital age. He leverages history to challenge conventional ideas of originality, authorship, and ownership. Overall, Laric’s work investigates how visuals function in virtual and physical worlds.</p>
-
     </div>
+
+    <h1>WHO IS OLIVER LARIC</h1>
+
+    <div class="content">
+        <div class="images">
+            <img src="images/oliver1.jpg" alt="Oliver Laric in studio" class="photo">
+            <img src="images/oliver2.jpg" alt="Oliver Laric with sculpture" class="photo">
+        </div>
+
+        <p class="bio-text">
+           Born in 1981 in Austria, now based in Berlin, Oliver Laric is regarded for exploring how appropriation serves as a creative force that shapes visual culture across both the past and present. His main themes seen throughout his work focus on the ideas of Iconoclasm, Kopienkritik, and copyright. He leverages multimedia to exemplify these concepts, this is seen through his work with sculpture, 3D technology, and video. One of his most prominent works is Versions (2010), a video essay which dives into these themes of copyright and iconoclasm. Icon (Utrecht) (2009) and Kopienkritik (2011) focus on how modifying sculptures can augment our understanding of historical artifacts and how they relate to the digital age. He leverages history to challenge conventional ideas of originality, authorship, and ownership. Overall, Laric’s work investigates how visuals function in virtual and physical worlds.
+
+        </p>
+    </div>
+
 </body>
 </html>
